# idea-validator

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  verify_brave.py
desktop/: index.html  package.json  tailwind.config.ts
desktop/.adk/: session.db
desktop/src/: App.tsx  styles.css  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: backend.rs  commands.rs  keyring_store.rs  main.rs  session_store.rs  stream.rs  types.rs
desktop/src/lib/: api.ts  chat.test.ts  chat.ts  sessionStore.test.ts  sessionStore.ts  toolEvents.test.ts  toolEvents.ts  types.ts
product_validator_search/: agent.py  cli.py  config.py  resilient_parallel_agent.py
product_validator_search/sources/: __init__.py
product_validator_search/sources/brave_search/: __init__.py  brave_search_agent.py  search_tool.py
product_validator_search/sources/competitors/: __init__.py  competitors_agent.py
product_validator_search/sources/github/: __init__.py  github_agent.py  search_tool.py
product_validator_search/sources/google_trends/: __init__.py  google_trends_agent.py  search_tool.py
product_validator_search/sources/hackernews/: __init__.py  hackernews_agent.py  search_tool.py
product_validator_search/sources/jobs_signal/: __init__.py  jobs_signal_agent.py  search_tool.py
product_validator_search/sources/openalex/: __init__.py  openalex_agent.py  search_tool.py
product_validator_search/sources/reddit/: __init__.py  reddit_agent.py  search_tool.py
product_validator_search/sources/review_sites/: __init__.py  (+2 more)
reports/: 20260215_105817_a_local_tool_for_instant_opening_analysis_and_quer.md  20260217_113519_a_local_software_tool_for_instant_opening_analysis.md  20260217_114028_an_ai-powered_data_science_interview_prep_platform.md  20260217_114558_ai_meeting_notes_summarizer_for_zoom_calls.md  20260217_115446_a_local_ide_for_biotech_that_allows_instant_openin.md  20260217_120203_an_ai-powered_data_science_interview_preparation_p.md  20260217_121441_ai-powered_linkedin_personal_branding_tool_that_us.md  20260217_132445_a_local_ide_for_biotech_featuring_a_duckdb-based_q.md
tests/: test_adaptive_evidence_reliability_prompts.py  test_imports.py  test_invalidation_prompts.py  test_search_tool_options.py  test_tools.py  test_v2_expansion.py
(+3 files in other folders)
