[package]
name = "product_validator_desktop"
version = "0.1.0"
description = "Desktop UI for Product Validator Search"
authors = ["Product Validator Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
futures-util = "0.3.31"
keyring = "3.6.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.2", features = [] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.16"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
